2007-11-17  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: OCI8::Cursor#fetch_hash accepts a block now.
	   OCI8#commit and OCI8#rollback return self now. They had returned
	   an OCISvcCtx which is internally used.
	* test/test_oci8.rb: add a test for fetch_hash with a block.
	* ext/oci8/oci8.h: fix a potential bug.
	     http://rubyforge.org/forum/forum.php?thread_id=19213&forum_id=1078
	* ext/oci8/attr.c: fix signedness. Logically this won't be related with
	   the following URL's problem. But there is a few possibility.
	     http://rubyforge.org/forum/forum.php?thread_id=15158&forum_id=1078

2007-11-16  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add OCI8::Cursor#column_metadata and a new class
	   OCI8::Metadata::Column.
	* test/test_all.rb, test/test_metadata.rb: add testcases for
	   OCI8::Metadata::Column.

2007-11-16  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocinumber.c, test/test_oci8.rb: fix a BUG to bind
	   Bignum. This bug was added in ruby-oci8 1.0.0-rc2.

2007-11-11  KUBO Takehiro  <kubo@jiubao.org>
	* test/config.rb, test/test_dbi.rb, test/test_describe.rb,
	  test/test_oci8.rb: add 'purge' option to 'drop table' statement
	   when Oracle 10g or upper.
	* ext/oci8/bind.c, ext/oci8/const.c, ext/oci8/oci8.h, ext/oci8/stmt.c,
	  lib/oci8.rb.in, test/test_oci8.rb: add OCI8::BindType::BinaryDouble
	   when SQLT_BDOUBLE is defined.

2007-10-14  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: fix for FreeBSD oracle8-client port.
	   Not all tests are passed on FreeBSD yet.

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: add DatabaseHandle#columns for DBI.
	    (suggested by Venkat Pa)

2007-10-11  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: fix external OS authentication.
	    I applied Dan Fitch's patch to improper location.

2007-07-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/DBD/OCI8/OCI8.rb: fix for external OS authentication.
	    (contributed by Dan Fitch)
